...
class VehicleStrings {
  VehicleStrings._();

  // Page titles
  static const String vehicles = 'Vehículos';
  static const String myVehicles = 'Mis Vehículos';
  static const String myGarage = 'Mi Garaje';
  static const String addVehicle = 'Agregar vehículo';
  static const String saveVehicle = 'Guardar vehículo';
  static const String editVehicle = 'Editar vehículo';
  static const String deleteVehicle = 'Eliminar vehículo';
  static const String addMaintenance = 'Agregar mantenimiento';

...
  static const String deleteVehicleWarning =
      'Esta acción eliminará todos los mantenimientos asociados a este vehículo y no se podrá deshacer.';
  static const String vehicleDeleted = 'Vehículo eliminado exitosamente';
  static const String vehicleSetAsMain = 'establecido como vehículo principal';
  static const String vehicleArchived = 'archivado';
  static const String vehicleUnarchived = 'desarchivado';
  static const String noVehicles = 'No tienes vehículos registrados';
  static const String noVehiclesAvailable = 'No hay vehículos disponibles';
  static const String noArchivedVehicles = 'No hay vehículos archivados';
  static const String mainVehicle = 'Vehículo principal';
  static const String thisWillBeMainVehicle = 'Este será tu vehículo principal';
  static const String archivedVehicle = 'Vehículo Archivado';
  static const String archivedVehicleMessage =
...
