...
  static const String loginSubtitleStitch = 'Acelera tu experiencia';
  static const String emailLabel = 'Correo electrónico';
  static const String emailHint = 'nombre@ejemplo.com';
  static const String passwordLabel = 'Contraseña';
  static const String passwordHint = 'Mínimo 8 caracteres';
  static const String forgotPassword = '¿Olvidaste tu contraseña?';
  static const String signInButton = 'Iniciar sesión';
  static const String orContinueWithStitch = 'O continúa con';
  static const String noAccountQuestion = '¿No tienes una cuenta?';
  static const String registerFreeLink = 'Regístrate gratis';
  static const String googleLabel = 'Google';
  static const String appleLabel = 'Apple';
  static const String signingInLabel = 'Iniciando sesión...';
...
